Removes horizontal scrollbar below 800px + various other responsive fixes and improvements

--- a/assets/css/modules/forms.styl
+++ b/assets/css/modules/forms.styl
@@ -9,7 +9,7 @@
   input-disabled()
 
 .field-warning
-  field: left
+  field: left 100%
 
   label
     label()
@@ -21,7 +21,7 @@
   field-warning()
 
 .field-warning2
-  field: left
+  field: left 100%
 
   label
     label()
@@ -33,7 +33,7 @@
   field-warning: #F8DE75
 
 .field-error
-  field: left
+  field: left 100%
 
   label
     label()
@@ -45,7 +45,7 @@
   field-error()
 
 .field-error2
-  field: left
+  field: left 100%
 
   label
     label()
@@ -57,7 +57,7 @@
   field-error: #FA7346
 
 .field-success
-  field: left
+  field: left 100%
 
   label
     label()
@@ -69,7 +69,7 @@
   field-success()
 
 .field-success2
-  field: left
+  field: left 100%
 
   label
     label()
@@ -81,7 +81,7 @@
   field-success: #9DF49E
 
 .field
-  field: left
+  field: left 100%
 
   label
     label()
@@ -91,7 +91,7 @@
     input()
 
 .field2
-  field: right 300px
+  field: right 100%
 
   label
     label()
